Wed Nov 15 02:28:01 2017 | 559bfd7 | fix just-added but that was causing exceptions
Wed Nov 15 02:11:34 2017 | 299d5ab | fix crossref api error, will fix metadata in response and return more OA
Tue Nov 14 00:24:52 2017 | 0cb0933 | set false for journal is oa
Mon Nov 13 01:58:08 2017 | 33dccce | add scielo to open publishers list

important milestones, annotated extra, from
TZ=UTC git log --date=local  --pretty='%cd | %h | %s'
